Fix reply editor misalignment after Discourse update 3.2.0.beta2-dev (#14)

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -282,12 +282,23 @@ nav.post-controls .actions .double-button button.button-count:not(.my-likes) {
         font-size: var(--font-up-5);
     }
 }
-  
 
 @media (min-width: 1024px) {
     .lazyYT-container {
         padding: 0 !important;
         width: 640px !important;
         height: 480px !important;
+    }
+}
+
+@media (min-width: 1281px) and (max-width: 1920px) {
+    #reply-control:not(.fullscreen) {
+        transform: unset !important;
+    }
+}
+
+@media (min-width: 1921px) {
+    #reply-control:not(.fullscreen) {
+        transform: translateX(calc((100vw - var(--d-max-width) - var(--d-sidebar-width)/0.5)/2 + 12em + 1rem)) !important;
     }
 }
